--- a/custom-webpack/package.json
+++ b/custom-webpack/package.json
@@ -46,6 +46,7 @@
     "express": "^4.15.2",
     "rxjs": "^5.4.0",
     "serialize-javascript": "^1.3.0",
+    "twit": "^2.2.9",
     "xhr2": "^0.1.4",
     "zone.js": "^0.8.10"
   },
